{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 106,
  "lineage": "26d45cdb-9644-b684-b7fd-24d400c8a462",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "apache",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0230bd60aa48260c6",
            "arn": "arn:aws:ec2:us-east-1:438465125805:instance/i-04a7978f454841341",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04a7978f454841341",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-bnk-keyp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d1371ef2f0c195ff",
            "private_dns": "ip-10-10-0-204.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.204",
            "public_ip": "54.158.254.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "Cloud": "AWS",
                  "Env": "Devel",
                  "IaC": "Terraform",
                  "IaC_Version": "v1.6.5",
                  "Owner": "AgusTinux",
                  "project": "voxia",
                  "region": "virginia"
                },
                "throughput": 125,
                "volume_id": "vol-0c104379a5e07a139",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-009f69e1cedffc0aa",
            "tags": {
              "Name": "apache-voxia-Devel-virginia"
            },
            "tags_all": {
              "Cloud": "AWS",
              "Env": "Devel",
              "IaC": "Terraform",
              "IaC_Version": "v1.6.5",
              "Name": "apache-voxia-Devel-virginia",
              "Owner": "AgusTinux",
              "project": "voxia",
              "region": "virginia"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0516fded394e4f8a1"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia",
            "data.aws_key_pair.myKey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465125805:internet-gateway/igw-0d6d6b73a39c2c8ef",
            "id": "igw-0d6d6b73a39c2c8ef",
            "owner_id": "438465125805",
            "tags": {
              "Name": "igw vpc virginia-voxia-Devel-virginia"
            },
            "tags_all": {
              "Cloud": "AWS",
              "Env": "Devel",
              "IaC": "Terraform",
              "IaC_Version": "v1.6.5",
              "Name": "igw vpc virginia-voxia-Devel-virginia",
              "Owner": "AgusTinux",
              "project": "voxia",
              "region": "virginia"
            },
            "vpc_id": "vpc-013352731437d845c"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465125805:route-table/rtb-0a3f241b61a67c4c1",
            "id": "rtb-0a3f241b61a67c4c1",
            "owner_id": "438465125805",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d6d6b73a39c2c8ef",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public crt-voxia-Devel-virginia"
            },
            "tags_all": {
              "Cloud": "AWS",
              "Env": "Devel",
              "IaC": "Terraform",
              "IaC_Version": "v1.6.5",
              "Name": "public crt-voxia-Devel-virginia",
              "Owner": "AgusTinux",
              "project": "voxia",
              "region": "virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-013352731437d845c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crta_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0797df5d8d4b2192d",
            "route_table_id": "rtb-0a3f241b61a67c4c1",
            "subnet_id": "subnet-009f69e1cedffc0aa"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_crt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465125805:security-group/sg-0516fded394e4f8a1",
            "description": "Allow SSH traffic and ALL egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0516fded394e4f8a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Public Instance SG",
            "name_prefix": "",
            "owner_id": "438465125805",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh-voxia-Devel-virginia"
            },
            "tags_all": {
              "Cloud": "AWS",
              "Env": "Devel",
              "IaC": "Terraform",
              "IaC_Version": "v1.6.5",
              "Name": "allow_ssh-voxia-Devel-virginia",
              "Owner": "AgusTinux",
              "project": "voxia",
              "region": "virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-013352731437d845c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465125805:subnet/subnet-03fbda052714bdc72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03fbda052714bdc72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "438465125805",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet-voxia-Devel-virginia"
            },
            "tags_all": {
              "Cloud": "AWS",
              "Env": "Devel",
              "IaC": "Terraform",
              "IaC_Version": "v1.6.5",
              "Name": "Private Subnet-voxia-Devel-virginia",
              "Owner": "AgusTinux",
              "project": "voxia",
              "region": "virginia"
            },
            "vpc_id": "vpc-013352731437d845c"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465125805:subnet/subnet-009f69e1cedffc0aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009f69e1cedffc0aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "438465125805",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet-voxia-Devel-virginia"
            },
            "tags_all": {
              "Cloud": "AWS",
              "Env": "Devel",
              "IaC": "Terraform",
              "IaC_Version": "v1.6.5",
              "Name": "Public Subnet-voxia-Devel-virginia",
              "Owner": "AgusTinux",
              "project": "voxia",
              "region": "virginia"
            },
            "vpc_id": "vpc-013352731437d845c"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465125805:vpc/vpc-013352731437d845c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0a1d388088788d413",
            "default_route_table_id": "rtb-041521b9e431c62e0",
            "default_security_group_id": "sg-032ca04482079be4f",
            "dhcp_options_id": "dopt-01b2410dfab6018b6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-013352731437d845c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-041521b9e431c62e0",
            "owner_id": "438465125805",
            "tags": {
              "Name": "VPC_Virginia-voxia-Devel-virginia"
            },
            "tags_all": {
              "Cloud": "AWS",
              "Env": "Devel",
              "IaC": "Terraform",
              "IaC_Version": "v1.6.5",
              "Name": "VPC_Virginia-voxia-Devel-virginia",
              "Owner": "AgusTinux",
              "project": "voxia",
              "region": "virginia"
            }
          }
        }
      ]
    }
  ]
}